log
Thu 05 Oct 2023 04:26:26 AM UTC: 
 tests:  0|5
total_score: 0/70
cfcb7ef
Thu 05 Oct 2023 06:25:55 AM UTC: 
 sudoku.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:73:5: error: expected expression before ‘}’ token
   73 |     }
      |     ^
sudoku.c:72:15: error: unused variable ‘j’ [-Werror=unused-variable]
   72 |       for(int j=0;i<9;i++)
      |               ^
sudoku.c:74:18: error: ‘i’ undeclared (first use in this function)
   74 |       if(n->sudo[i][j]==0)
      |                  ^
sudoku.c:74:18: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:74:21: error: ‘j’ undeclared (first use in this function)
   74 |       if(n->sudo[i][j]==0)
      |                     ^
sudoku.c:79:1: error: control reaches end of non-void function [-Werror=return-type]
   79 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
36d5dc3
Thu 05 Oct 2023 06:54:16 AM UTC: 
 sudoku.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1a71a9a
Thu 05 Oct 2023 06:56:31 AM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
bb9a522
Thu 05 Oct 2023 06:57:04 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2c62564
Thu 05 Oct 2023 06:57:56 AM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a36bdd5
Thu 05 Oct 2023 06:58:39 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
e08c5a8
Thu 05 Oct 2023 06:58:59 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
32ab92e
Thu 05 Oct 2023 06:59:17 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
17d8822
Thu 05 Oct 2023 06:59:29 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
7380f1f
Thu 05 Oct 2023 06:59:36 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
9e3b6ed
